统一异常处理

--- a/springbootspace/springbootdemo/src/main/resources/application.properties
+++ b/springbootspace/springbootdemo/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 com.hao.name=kk
 com.hao.title=soft
 com.hao.desc=${com.hao.name}\u662F\u4E00\u4E2A${com.hao.title}
+
+spring.thymeleaf.mode=LEGACYHTML5
+# Enable template caching.
+spring.thymeleaf.cache=false
+# Check that the template exists before rendering it.
+spring.thymeleaf.check-template=true
+# Check that the templates location exists.
+spring.thymeleaf.check-template-location=true
+# Content-Type value.
+spring.thymeleaf.content-type=text/html
+# Enable MVC Thymeleaf view resolution.
+spring.thymeleaf.enabled=true
+# Template encoding.
+spring.thymeleaf.encoding=UTF-8
