--- a/springbootspace/springbootdemo/pom.xml
+++ b/springbootspace/springbootdemo/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!--LEGACYHTML5需要搭配一个额外的库NekoHTML才可用-->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
