--- a/springbootspace/springbootdemo/src/main/resources/application.properties
+++ b/springbootspace/springbootdemo/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.thymeleaf.content-type=text/html
 spring.thymeleaf.enabled=true
 # Template encoding.
 spring.thymeleaf.encoding=UTF-8
+
+#\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=hao
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
