--- a/springbootspace/springbootdemo/pom.xml
+++ b/springbootspace/springbootdemo/pom.xml
@@ -60,6 +60,7 @@
             <version>1.9.22</version>
         </dependency>
 
+        <!--使用用数据库-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -70,6 +71,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.44</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
 
