--- a/springbootspace/springbootdemo/src/main/resources/application.properties
+++ b/springbootspace/springbootdemo/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&character
 spring.datasource.username=hao
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#\u662Fhibernate\u7684\u914D\u7F6E\u5C5E\u6027\uFF0C\u5176\u4E3B\u8981\u4F5C\u7528\u662F\uFF1A\u81EA\u52A8\u521B\u5EFA\u3001\u66F4\u65B0\u3001\u9A8C\u8BC1\u6570\u636E\u5E93\u8868\u7ED3\u6784\u3002\u8BE5\u53C2\u6570\u7684\u51E0\u79CD\u914D\u7F6E\u5982\u4E0B
+#create,create-drop,update,validate
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
