--- a/springbootspace/springbootdemo/src/main/resources/application.properties
+++ b/springbootspace/springbootdemo/src/main/resources/application.properties
@@ -26,5 +26,14 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #create,create-drop,update,validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-
+#debug=true
+spring.output.ansi.enabled=detect
 logging.level.com.myjsp=DEBUG
+
+#\u82E5\u8981\u589E\u52A0\u6587\u4EF6\u8F93\u51FA\uFF0C\u9700\u8981\u5728application.properties\u4E2D\u914D\u7F6Elogging.file\u6216logging.path\u5C5E\u6027\u3002path\u5C5E\u6027
+#logging.file\uFF0C\u8BBE\u7F6E\u6587\u4EF6\uFF0C\u53EF\u4EE5\u662F\u7EDD\u5BF9\u8DEF\u5F84\uFF0C\u4E5F\u53EF\u4EE5\u662F\u76F8\u5BF9\u8DEF\u5F84\u3002\u5982\uFF1A
+logging.file=d:/logs/springboot-test-log.log
+#logging.path\uFF0C\u8BBE\u7F6E\u76EE\u5F55\uFF0C\u4F1A\u5728\u8BE5\u76EE\u5F55\u4E0B\u521B\u5EFAspring.log\u6587\u4EF6\uFF0C\u5E76\u5199\u5165\u65E5\u5FD7\u5185\u5BB9\uFF0C\u5982\uFF1A
+#logging.path=/var/logging
+
+logging.level.com.example.demo=DEBUG
