--- a/springbootspace/springbootdemo/pom.xml
+++ b/springbootspace/springbootdemo/pom.xml
@@ -42,6 +42,11 @@
             <version>1.3.8.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
